--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "video-drone",
   "version": "0.1.0",
-  "homepage": "https://https://mathispastrenelson.github.io/video-drone/",
+  "homepage": "https://mathispastrenelson.github.io/video-drone",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
